--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
 streamlit>=1.26.0
+sys
+pandas
+numpy
+matplotlib
+os
+streamlit
+seaborn
+folium
+plotly
+streamlit_folium
+sklearn
+xgboost
+streamlit_option_menu
